fixed nav bar overflow

--- a/style-about.css
+++ b/style-about.css
@@ -54,7 +54,7 @@ body {
 
 .active {
 	font-weight: 1000;
-	width: 20%;
+	width: 40%;
 	color: #666666;
 	text-align: left;
 }
